Modify default news_storage_time on 1 week. Fix bug with text overflow in feed source name on list.jsp page.

--- a/src/main/webapp/resources/css/standard.css
+++ b/src/main/webapp/resources/css/standard.css
@@ -402,6 +402,9 @@ li.sortable-placeholder {
 .feed-list .item .name {
     height: 25px;
     font-weight: bold;
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
 }
 
 .feed-list .item .name a {
